# eos-ledger

./: .gitignore  EOS device icon.ai  Ledger Manager icon EOS.ai  Makefile  README.md  TxEncode.py  eosBase.py  ethBase.py  getPublicKey.py  setSelfAddress.py  sign.py  signTransaction.py  signTx.py  splitEther.py  transaction.json  transaction_buyrambytes.json  transaction_linkauth.json  transaction_sellram.json  transaction_unknown.json  transaction_unlinkauth.json  transaction_updateauth.json  transaction_vote.json  transaction_vote_proxy.json
.github/workflows/: ci-workflow.yml
desktop/desktop/: cx.c  cx.h  main.c  os.h
desktop/desktop.xcodeproj/: project.pbxproj
desktop/desktop.xcodeproj/project.xcworkspace/xcuserdata/tarasshchybovyk.xcuserdatad/: UserInterfaceState.xcuserstate
desktop/desktop.xcodeproj/xcuserdata/tarasshchybovyk.xcuserdatad/xcschemes/: xcschememanagement.plist
doc/: eosapp.asc
fuzz/: CMakeLists.txt  default.profdata  default.profraw  fuzztest.c  os_mocks.c  readme.md
fuzz/ref_corpus/: transaction  transaction_buyram  transaction_buyrambytes  transaction_deleteauth  transaction_linkauth  transaction_newaccount  transaction_refund  transaction_sellram  transaction_unknown  transaction_unlinkauth  transaction_updateauth  transaction_vote  transaction_vote_proxy
src/: eos_parse.c  eos_parse.h  eos_parse_eosio.c  eos_parse_eosio.h  eos_parse_token.c  eos_parse_token.h  eos_parse_unknown.c  eos_parse_unknown.h  eos_stream.c  eos_stream.h  eos_types.c  eos_types.h  eos_utils.c  eos_utils.h  main.c  nv_storage.c  nv_storage.h  ui.h  ui_blue.c  ui_nanos.c  utils.c  utils.h
test/: decodeTransaction.py  eosBase.py  generate_corpus.py  getPublicKey.py  signTransaction.py  testDerivationPathGeneration.py  transaction.json  transaction_buyram.json  transaction_deleteauth.json  transaction_newaccount.json  transaction_refund.json  transaction_updateauth.json
tests/: .gitignore
tests/functional/: conftest.py  test_eos.py
tests/functional/apps/: eos.py  eos_transaction_builder.py
